--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,13 @@
 //var
 //utils
 //main
+
+.loading{
+  background-color: rgba(#000,0.5);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  @include flex()
+}
