--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,11 @@
 
 //var
 //utils
+body{
+  font-family: 'Roboto', sans-serif;
+}
 //main
+
 
 .loading{
   background-color: rgba(#000,0.5);
@@ -19,4 +23,15 @@
   width: 100%;
   height: 100%;
   @include flex()
+}
+//component
+.repo{
+  &-title{
+    font-size: 20px;
+    color: #0366D6;
+  }
+  &-time{
+    font-size: 14px;
+    color: #5F666F;
+  }
 }
