add_lang func & css & html

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,9 +12,18 @@
 body{
   font-family: 'Roboto', sans-serif;
 }
+.container{
+  margin: 0 auto;
+  padding: 0 20px;
+}
+//header
+header{
+  background-color: #24292E;
+}
 //main
-
-
+main .container{
+  width: 80%;
+}
 .loading{
   background-color: rgba(#000,0.5);
   position: absolute;
@@ -28,6 +37,7 @@ body{
 .repo{
   @extend %clearfix;
   padding: 24px 0;
+  border-bottom: 1px solid #e1e4e8;
   &-wrap{
     float:left;
   }
@@ -38,8 +48,23 @@ body{
       text-decoration: underline;
     }
   }
+  &-description{
+    margin: 10px 0;
+    color: #5F666F;
+  }
   &-time{
     float: right;
+    font-size: 14px;
+    color: #5F666F;
+    margin-top: 10px;
+  }
+  &-circle{
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+  }
+  &-language{
     font-size: 14px;
     color: #5F666F;
   }
