--- a/scss/main.scss
+++ b/scss/main.scss
@@ -130,6 +130,11 @@ main .container {
     top: -1px;
   }
 }
+.no-repo{
+  margin-top: 20px;
+  padding-left: 5px;
+  font-size: 20px;
+}
 //component-search
 .repo {
   @extend %clearfix;
