Mod_color in whole page

--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -3,9 +3,11 @@ $fw: 800 400;
 
 
 $color: (
-    primary: #42B883,
+    primary: #24292e,
     secondary: #fff,
-    accent1: #FFAFAF,
+    accent1: #888,
+    accent2: #ddd,
+    text: #aaa,
 );
 
 $device: (
