--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -8,6 +8,10 @@ $color: (
     accent1: #888,
     accent2: #ddd,
     text: #aaa,
+    accent3: #28a745,
+    accent4: #34d058,
+    more_hover:#0366d6,
+    forbid: #e1e4e8
 );
 
 $device: (
