--- a/scss/main.scss
+++ b/scss/main.scss
@@ -297,6 +297,17 @@ main .container {
   color: map-get($map: $color, $key: primary);
   box-shadow: 2px 1px 15px rgba(227, 231, 235, 0.3);
   border-radius: 4px;
+  @include pseudo(before){
+    width: 0;
+    height: 0;
+    right: 15px;
+    top: -12px;
+    border: 7px solid transparent;
+    border-bottom-color: white;
+  }
+  @include media(mobile){
+    width: 265px;
+  }
   &-top{
     padding: 10px 20px;
   }
