--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,12 +101,14 @@ header {
     }
     @at-root &-wrap {
       display: inline-block;
+      position: relative;
       @include media(mobile){
         display: block;
       }
     }
     @at-root &-content {
       background-color: map-get($map: $color, $key: accent2);
+      border-radius: 2px 2px 0;
       @include flex(none, center);
       &-input {
         width: 300px;
@@ -116,6 +118,7 @@ header {
         border: none;
         outline: none;
         transition: width 0.2s 0.05s ease-in-out;
+        border-radius: 2px 0 0;
         @include media(mobile){
           width: 100%;
         }
@@ -128,6 +131,29 @@ header {
       }
       &-svg{
         fill: map-get($map: $color, $key: primary);
+      }
+      
+    }
+    &-history{
+      width: 100%;
+      display: flex;
+      @include flex(between,center);
+      position: absolute;
+      left: 0;
+      background-color: orange;
+      z-index: 1;
+      border: 1px solid map-get($map: $color, $key: forbid);
+      background-color: #fff;
+      display: none;
+      &:last-child{
+        border-radius: 0 0 2px 2px;
+      }
+      >p{
+        padding: 5px 8px;
+      }
+      >div{
+        padding: 5px 12px 5px 6px;
+        cursor: pointer;
       }
     }
   }
@@ -165,6 +191,7 @@ main .container {
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
   @include flex();
 }
 .classify {
@@ -203,6 +230,7 @@ main .container {
   margin-top: 20px;
   padding-left: 5px;
   font-size: 20px;
+  color: map-get($map: $color, $key: secondary);
 }
 .no-user {
   text-align: center;
@@ -221,7 +249,7 @@ main .container {
 .repo {
   @extend %clearfix;
   padding: 20px 0;
-  border-bottom: 1px solid #e1e4e8;
+  border-bottom: 1px solid map-get($map: $color, $key: forbid);
   &-wrap {
     width: 100%;
     position: relative;
@@ -297,17 +325,6 @@ main .container {
   color: map-get($map: $color, $key: primary);
   box-shadow: 2px 1px 15px rgba(227, 231, 235, 0.3);
   border-radius: 4px;
-  @include pseudo(before){
-    width: 0;
-    height: 0;
-    right: 15px;
-    top: -12px;
-    border: 7px solid transparent;
-    border-bottom-color: white;
-  }
-  @include media(mobile){
-    width: 265px;
-  }
   &-top{
     padding: 10px 20px;
   }
@@ -452,6 +469,9 @@ main .container {
   }
   .search-content-svg {
     fill: map-get($map: $color, $key: secondary);
+  }
+  .search-history{
+    display: flex;
   }
 }
 .active{
